--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -339,7 +339,7 @@
   </div>
 
   <!-- Resources -->
-  <h2>Resources</h2>
+  <h2>Resources Powered by Juvenal Elías</h2>
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
